--- a/Módulo C/Aula 1/index.html
+++ b/Módulo C/Aula 1/index.html
@@ -22,10 +22,11 @@
     <h1>Estudando DOM</h1>
     <p>Aqui fica o resultado</p>
     <p>Aprendendo a usar o <strong>DOM</strong> em JavaScript.</p>
-    <div>Clique aqui</div>
+    <div>Clique aqui</div><br>
+    
     <script>
-
-
+       var p1 = window.document.getElementsByTagName('p')[0];
+                document.write(`Está escrito: ${p1.innerText}`);
 
     </script>
 </body>
