--- a/Módulo C/Aula 1/index.html
+++ b/Módulo C/Aula 1/index.html
@@ -25,8 +25,10 @@
     <div>Clique aqui</div><br>
     
     <script>
+        var corpo = window.document.body
        var p1 = window.document.getElementsByTagName('p')[0];
-                document.write(`Está escrito: ${p1.innerText}`);
+       corpo.style.backgroud = 'Black'
+               
 
     </script>
 </body>
