--- a/Módulo C/Aula 1/index.html
+++ b/Módulo C/Aula 1/index.html
@@ -19,12 +19,14 @@
     <h1>Estudando DOM</h1>
     <p>Aqui fica o resultado</p>
     <p>Aprendendo a usar o <strong>DOM</strong> em JavaScript.</p>
-    <div>Clique aqui</div><br>
+    <div id="msg">Clique aqui</div><br>
     
     <script>
         var corpo = window.document.body
-       var p1 = window.document.getElementsByTagName('p')[0];
-       corpo.style.backgroud = 'Black'
+       let x = window.document.getElementsById("msg");
+       d.style.background = "navy"
+       d.innerText = "Oi"
+
        
 
     </script>
