--- a/Módulo C/Aula 1/index.html
+++ b/Módulo C/Aula 1/index.html
@@ -23,8 +23,8 @@
     
     <script>
         var corpo = window.document.body
-       let x = window.document.getElementsById("msg");
-       d.style.background = "navy"
+       let x = window.document.getElementsById('msg');
+       d.style.background = 'navy'
        d.innerText = "Oi"
 
        
