--- a/Módulo C/Aula 1/index.html
+++ b/Módulo C/Aula 1/index.html
@@ -22,10 +22,10 @@
     <div id="msg">Clique aqui</div><br>
     
     <script>
-        var corpo = window.document.body
-       let x = window.document.getElementsById('msg');
-       d.style.background = 'navy'
-       d.innerText = "Oi"
+        var corpo = window.document.body;
+       var x = window.document.getElementById('msg');
+       x.style.background = 'navy';
+       x.innerText = "Oi";
 
        
 
