--- a/Módulo C/Aula 1/index.html
+++ b/Módulo C/Aula 1/index.html
@@ -23,7 +23,7 @@
     
     <script>
         var corpo = window.document.body
-       let x = window.document.getElementsById("msg");
+       let x = window.document.getElementById("msg");
        x.style.background = "navy"
        x.innerText = "Oi"
 
